--- a/HodEngine-Editor/Src/DockableWindow/Contents.ui
+++ b/HodEngine-Editor/Src/DockableWindow/Contents.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DockWidget</class>
- <widget class="QDockWidget" name="DockWidget">
+ <class>Contents</class>
+ <widget class="QDockWidget" name="Contents">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -18,11 +18,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="placeholderText">
-         <string>Search a Content...</string>
-        </property>
-       </widget>
+       <widget class="QLineEdit" name="lineEdit"/>
       </item>
       <item>
        <widget class="QComboBox" name="comboBox"/>
