--- a/HodEngine-Editor/Src/mainwindow.ui
+++ b/HodEngine-Editor/Src/mainwindow.ui
@@ -27,9 +27,14 @@
     <property name="title">
      <string>File</string>
     </property>
+    <widget class="QMenu" name="menuRecent">
+     <property name="title">
+      <string>Recent</string>
+     </property>
+    </widget>
     <addaction name="actionNew_project"/>
     <addaction name="actionOpen_project"/>
-    <addaction name="actionRecent"/>
+    <addaction name="menuRecent"/>
     <addaction name="separator"/>
     <addaction name="actionClose_project"/>
     <addaction name="actionSave"/>
@@ -97,11 +102,6 @@
     <string>Save</string>
    </property>
   </action>
-  <action name="actionRecent">
-   <property name="text">
-    <string>Recent</string>
-   </property>
-  </action>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
@@ -160,6 +160,11 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionggfdg">
+   <property name="text">
+    <string>ggfdg</string>
    </property>
   </action>
  </widget>
