--- a/HodEngine-Editor/Src/DockableWindow/Contents/Contents.ui
+++ b/HodEngine-Editor/Src/DockableWindow/Contents/Contents.ui
@@ -26,7 +26,14 @@
      </layout>
     </item>
     <item>
-     <widget class="QTreeView" name="treeView"/>
+     <widget class="QTreeView" name="treeView">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectItems</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
