--- a/HodEngine-Editor/Src/DockableWindow/ContentWindow/ContentWindow.ui
+++ b/HodEngine-Editor/Src/DockableWindow/ContentWindow/ContentWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Contents</class>
- <widget class="QDockWidget" name="Contents">
+ <class>ContentWindow</class>
+ <widget class="QDockWidget" name="ContentWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
